Fixed grid alignment on home page

--- a/src/_includes/css/main.css
+++ b/src/_includes/css/main.css
@@ -407,11 +407,12 @@ iframe[src*="youtube"] {
 }
 .homegrid > *:nth-child(3) {
 	grid-column: 1 / -1;
+	justify-self: center;
 }
 .homegrid h3 {
 	margin-block-end: 0.5rem;
 	text-align: center;
 }
-.homegrid .bkitem {
+/* .homegrid .bkitem {
 	justify-self: center;
-}
+} */
